# ble-clock-beacon

./: README.md  pyproject.toml
ble_clock_beacon/: __init__.py  __main__.py  advertiser.py  daemon.py  ntp.py  protocol.py  scheduler.py
docs/: plan.md
systemd/: ble-clock-beacon.service
tests/: test_advertiser.py  test_imports.py  test_ntp.py  test_protocol.py  test_scheduler.py
