[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ble-clock-beacon"
version = "0.1.0"
description = "Time beacon daemon for the ble-clock low-power BLE clock."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "SASAKI Hideo" }]
dependencies = [
    "dbus-next>=0.2.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-asyncio>=0.21",
]

[project.scripts]
ble-clock-beacon = "ble_clock_beacon.daemon:main"

[tool.setuptools.packages.find]
include = ["ble_clock_beacon*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
